syntax = "proto3";

package com.dastunvidal;

import "product.proto";

message ReadProductRequest {
  oneof request {
    string identifier = 1;
  }
}

message ReadProductResponse {
  oneof response {
    Product product = 1;
    Error error = 2;
  }
}

message Error {

}

service ProductApi {
  rpc ReadProduct(stream ReadProductRequest) returns (stream ReadProductResponse) {}
}