syntax = "proto3";

package io.github.mavenrain;

message ProductCategory {
  oneof sealed_trait {
    First first = 1;
  }
}

message First {

}